[project]
name = "llm-post-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "distro==1.9.0",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.17.0",
    "idna==3.17",
    "jiter==0.15.0",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "numpy==2.4.6",
    "openai==2.38.0",
    "packaging==26.2",
    "pip==26.1.1",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "tokenizers==0.22.2",
    "tqdm==4.67.3",
    "transformers==5.9.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uv==0.11.16",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
