[project]
name = "llm-post-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cuda-bindings==13.3.0",
    "cuda-pathfinder==1.5.5",
    "cuda-toolkit==13.0.2",
    "datasets==4.8.5",
    "dill==0.4.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "filelock==3.29.0",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.17.0",
    "identify==2.6.19",
    "idna==3.17",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "networkx==3.6.1",
    "nodeenv==1.10.0",
    "numpy==2.4.6",
    "nvidia-cublas==13.1.1.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.20.0.48",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.1",
    "nvidia-nccl-cu13==2.29.7",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "openai==2.38.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "pip==26.1.1",
    "platformdirs==4.10.0",
    "pre-commit==4.6.0",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "pyarrow==24.0.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.4.0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "torch==2.12.0",
    "tqdm==4.67.3",
    "transformers==5.9.0",
    "triton==3.7.0",
    "trl==1.5.1",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uv==0.11.16",
    "virtualenv==21.4.1",
    "xxhash==3.7.0",
    "yarl==1.24.2",
    "pre-commit>=4.6.0",
]
