[tool.setuptools]
packages = []

[project]
name = "llm-post-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "bitsandbytes==0.49.2",
    "certifi==2026.5.20",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "comm==0.2.3",
    "cuda-bindings==13.3.0",
    "cuda-pathfinder==1.5.5",
    "cuda-toolkit==13.0.2",
    "datasets==3.6.0",
    "debugpy==1.8.20",
    "decorator==5.3.1",
    "dill==0.3.8",
    "distlib==0.4.0",
    "distro==1.9.0",
    "executing==2.2.1",
    "filelock==3.29.0",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.33.0",
    "identify==2.6.19",
    "idna==3.17",
    "ipykernel==7.2.0",
    "ipython==9.14.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jinja2==3.1.2",
    "jiter==0.15.0",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "markdown-it-py==4.2.0",
    "markupsafe==2.0.1",
    "matplotlib-inline==0.2.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.16",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nodeenv==1.10.0",
    "numpy==1.26.4",
    "nvidia-cublas==13.1.1.3",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cudnn-cu13==9.20.0.48",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-cusparselt-cu13==0.8.1",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nccl-cu13==2.29.7",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "nvidia-nvtx-cu12==12.1.105",
    "openai==2.38.0",
    "packaging==26.2",
    "pandas==2.3.0",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pip==26.1.1",
    "platformdirs==4.10.0",
    "pre-commit==4.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==24.0.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.4.0",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tokenizers==0.21.4",
    "torch==2.3.0",
    "tornado==6.5.6",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "transformers==4.52.4",
    "triton==3.7.0",
    "trl==0.14.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uv==0.11.16",
    "virtualenv==21.4.1",
    "wcwidth==0.7.0",
    "xxhash==3.7.0",
    "yarl==1.24.2",
]
